--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:file:/data/demo
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto = create-drop
 
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+
+spring.devtools.restart.log-condition-evaluation-delta=false
+
+epivector.app.jwtCookieName= epivector
+epivector.app.jwtSecret= epivectorSecretKey
+epivector.app.jwtExpirationMs= 86400000
